# test-poetry-setuptools

./: README.md
test-functools/: pyproject.toml
test-testing/: pyproject.toml
